--- a/src/dags/sandbox.ipynb
+++ b/src/dags/sandbox.ipynb
@@ -9,19 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../repository/\")\n",
     "import database as db\n",
-    "import polars as pl"
+    "import polars as pl\n",
+    "from math import floor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,52 +110,51 @@
     "\n",
     "df = db_rank_registering_property.join(\n",
     "    ef_property_rights, how=\"left\", on=\"country_id\"\n",
-    ").join(ti_property_rights, how=\"left\", on=\"country_id\")"
+    ").join(ti_property_rights, how=\"left\", on=\"country_id\")\n",
+    "df = df.sort(by=[\"ef_rank\", \"db_rank\", \"ti_rank\"], descending=False, nulls_last=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "/tmp/ipykernel_3100/3714414455.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  ranking / len(df) * 100 if status is \"best\" else 100 - ranking / len(df) * 100\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (186, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>country_id</th><th>db_rank</th><th>ef_rank</th><th>ti_rank</th></tr><tr><td>i64</td><td>i64</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>215</td><td>18</td><td>1</td><td>null</td></tr><tr><td>158</td><td>2</td><td>2</td><td>null</td></tr><tr><td>60</td><td>11</td><td>3</td><td>null</td></tr><tr><td>69</td><td>6</td><td>4</td><td>117</td></tr><tr><td>200</td><td>21</td><td>5</td><td>113</td></tr><tr><td>166</td><td>15</td><td>6</td><td>null</td></tr><tr><td>195</td><td>19</td><td>7</td><td>68</td></tr><tr><td>233</td><td>10</td><td>8</td><td>75</td></tr><tr><td>44</td><td>63</td><td>9</td><td>116</td></tr><tr><td>102</td><td>16</td><td>10</td><td>null</td></tr><tr><td>235</td><td>null</td><td>11</td><td>null</td></tr><tr><td>40</td><td>36</td><td>12</td><td>null</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>68</td><td>178</td><td>null</td><td>8</td></tr><tr><td>62</td><td>179</td><td>null</td><td>null</td></tr><tr><td>126</td><td>180</td><td>null</td><td>78</td></tr><tr><td>16</td><td>181</td><td>null</td><td>null</td></tr><tr><td>96</td><td>182</td><td>null</td><td>27</td></tr><tr><td>187</td><td>185</td><td>null</td><td>null</td></tr><tr><td>0</td><td>186</td><td>null</td><td>10</td></tr><tr><td>127</td><td>187</td><td>null</td><td>3</td></tr><tr><td>138</td><td>187</td><td>null</td><td>null</td></tr><tr><td>144</td><td>187</td><td>null</td><td>null</td></tr><tr><td>161</td><td>null</td><td>null</td><td>35</td></tr><tr><td>128</td><td>null</td><td>null</td><td>null</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (186, 4)\n",
-       "┌────────────┬─────────┬─────────┬─────────┐\n",
-       "│ country_id ┆ db_rank ┆ ef_rank ┆ ti_rank │\n",
-       "│ ---        ┆ ---     ┆ ---     ┆ ---     │\n",
-       "│ i64        ┆ i64     ┆ u32     ┆ u32     │\n",
-       "╞════════════╪═════════╪═════════╪═════════╡\n",
-       "│ 215        ┆ 18      ┆ 1       ┆ null    │\n",
-       "│ 158        ┆ 2       ┆ 2       ┆ null    │\n",
-       "│ 60         ┆ 11      ┆ 3       ┆ null    │\n",
-       "│ 69         ┆ 6       ┆ 4       ┆ 117     │\n",
-       "│ …          ┆ …       ┆ …       ┆ …       │\n",
-       "│ 138        ┆ 187     ┆ null    ┆ null    │\n",
-       "│ 144        ┆ 187     ┆ null    ┆ null    │\n",
-       "│ 161        ┆ null    ┆ null    ┆ 35      │\n",
-       "│ 128        ┆ null    ┆ null    ┆ null    │\n",
-       "└────────────┴─────────┴─────────┴─────────┘"
+       "''"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sort(by=[\"ef_rank\", \"db_rank\", \"ti_rank\"], descending=False, nulls_last=True)"
+    "try:\n",
+    "    ranking = df.select(pl.arg_where(pl.col(\"country_id\") == 85)).item()\n",
+    "    status = \"best\" if ranking <= floor(len(df) / 2) else \"worst\"\n",
+    "    percentage = (\n",
+    "        ranking / len(df) * 100 if status is \"best\" else 100 - ranking / len(df) * 100\n",
+    "    )\n",
+    "    comparison = (\n",
+    "        \"Among the **{:.1f}% {}** countries in safeguarding Property Rights.\".format(\n",
+    "            percentage, status\n",
+    "        )\n",
+    "    )\n",
+    "except ValueError:\n",
+    "    ranking, comparison = 0, \"\"\n",
+    "comparison"
    ]
   }
  ],
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
